syntax="proto3";

package greet;

service GreetService{
    //unary API
    rpc Greet (GreetRequest) returns (GreetResponse){}

    // Server push 
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}

    // Client push
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

    // Bidirectional stream
    rpc GreetEveryone(stream GERequest) returns (stream GEResponse){}
}

message GERequest{
    Greeting greeting = 1;
}

message GEResponse{
    string result = 1;
}

message LongGreetRequest{
    Greeting lgreeting = 1;
} 

message LongGreetResponse{
    string result = 1;
}

message Greeting{
    string first_name = 1;
    string last_name =2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetManyTimesRequest{
    Greeting greeting = 1;
}

message GreetManyTimesResponse{
    string result = 1;
}