syntax="proto3";

package sum;

message SumMessage{
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumRequest{
    SumMessage sum_message = 1; 
}

message SumResponse{
    int32 result = 1;
}

service SumService{
    rpc Sum(SumRequest) returns (SumResponse){}
}